# wireslam

./: .gitignore  CMakeLists.txt  README.md
results/: pure_odom.csv  room1.csv  room1_001.csv  room1_005.csv  room1_msckf_10_05.csv  room1_msckf_w10.csv  room1_noimu.csv  room1_nostat.csv  room1_nostat_02.csv  room1_okvis_w50.csv  room1_scratch.csv  room1_swf_w1.csv  room1_swf_w10.csv  room1_swf_w30.csv  room1_swf_w5.csv  room1_w_10.csv  room1_w_10_05.csv  room1_w_20.csv  room1_w_30.csv  room1_w_40.csv  room2_med_msckf_w10.csv  room2_med_swf_w30.csv  sc0_lines.csv  sc0_lines_points.csv  sc0_points.csv  sc0_points_lines_constr.csv  sc0_points_lines_constr_scratch.csv  struct_lines.json  struct_points_lines_constr.json  struct_points_lines_constr_scratch.json  wireframe_points.csv  wireframe_points_lines.csv  wireframe_scratch.csv  wireframe_scratch_lines.csv  wireframe_scratch_points.csv  wireframe_scratch_points_lines.csv
src/: LinePointFactor.h  LineSegmentMonoFactor.h  PluckerLine.h  WireSLAM.h  main_line.cc  slam_backend.cc  vis.py  vis_structure.py
